--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^9.0.9",
+    "@loopback/authentication-jwt": "^0.12.9",
+    "@loopback/authorization": "^0.12.9",
     "@loopback/boot": "^5.0.8",
     "@loopback/core": "^4.0.8",
     "@loopback/repository": "^5.1.3",
@@ -57,6 +60,8 @@
     "@loopback/rest-explorer": "^5.0.8",
     "@loopback/service-proxy": "^5.0.8",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "loopback-connector-postgresql": "^5.5.2",
     "moment": "^2.29.4",
@@ -67,6 +72,8 @@
     "@loopback/build": "^9.0.8",
     "@loopback/eslint-config": "^13.0.8",
     "@loopback/testlab": "^5.0.8",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^14.18.36",
     "eslint": "^8.33.0",
     "source-map-support": "^0.5.21",
